# PyBiographical

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  QUICKSTART.md  README.md  RELEASE.md  RELEASE_NOTES.md  ROADMAP.md  pyproject.toml
.github/workflows/: test.yml
docs/: MIGRATION_PLAN.md  PROGRESS.md
scripts/: README.md  format.sh  prepare-release.sh
src/pybiographical/: __init__.py  env.py  ramdisk.py
src/pybiographical/io/: __init__.py  yaml_utils.py
src/pybiographical/locations/: __init__.py  models.py  registry.py
src/pybiographical/matching/: __init__.py  fuzzy.py
src/pybiographical/names/: __init__.py  models.py  registry.py  resolver.py
src/pybiographical/persons/: __init__.py  crud.py  models.py  validation.py
